# jax-llm-examples

./: README.md  mcjax_defs.sh  mcjax_setup.sh  pyproject.toml
.github/workflows/: tests.yaml
deepseek_r1_jax/: README.md  deepseek_core_logic.py
deepseek_r1_jax/deepseek_r1_jax/: chkpt_utils.py  decode_ragged_dot.py  model.py
deepseek_r1_jax/scripts/: get_params_metadata_hf.py
gemma4/: main.py
gpt_oss/gpt_oss_jax/: model.py
jax_llm_examples/: __init__.py
jax_llm_examples/cli/: __main__.py
kimi_k2/: pyproject.toml
llama3/: README.md  configs.py  main.py  pyproject.toml
llama3/llama3_jax/: attention_cache_utils.py  model.py
llama3/scripts/: convert_weights.py  download_model.py
llama3/tests/: test_model.py
llama4/: README.md
llama4_jax/: README.md  pyproject.toml
llama4_jax/llama4_jax/: __main__.py  chkpt_utils.py  model.py  ragged_attention.py
llama4_jax/scripts/: convert_weights.py  download_model.py  quantize_model.py
nemotron3/nemotron3_jax/: model.py
qwen3/: README.md  main.py  pyproject.toml
qwen3/qwen3_jax/: model.py
qwen3/scripts/: convert_weights.py  quantize_model.py
serving/: client_demo.py  main_serving.py  main_serving_ds_r1.py  pyproject.toml
serving/serving_jax/: __init__.py  attention_cache_utils.py  cross_host.py  http_server.py  serving_loop.py
