[project]
name = "serving_jax"
version = "0.1.0"
description = ""
authors = [
    { name = "Robert Dyro" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "jax",
    "tqdm",
    "numpy",
    #"orbax-checkpoint",
    #"datasets",
    "gcsfs",
    "etils",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["serving_jax"]

[tool.setuptools.dynamic]
dependencies = { file = ["pyproject.toml"] }
